--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>4.1.6.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 
     <properties>
